<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/typeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/gameType"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioGroup
            android:id="@+id/typeRatioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/teamRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/typeTeam"
                android:onClick="onTypeChange"/>

            <RadioButton
                android:id="@+id/roundRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/typeRound"
				android:onClick="onTypeChange"/>
        </RadioGroup>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/levelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/levelSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    
    
    <!-- **************************** PLAYER CONTAINER ******************************* -->
    <LinearLayout
        android:id="@+id/playersContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </LinearLayout>
    <!-- ****************************************************************************************************** -->
    
    
    <TextView
        android:id="@+id/teamHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teamHint"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/addUserButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addPlayer"
        android:onClick="addPlayer" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start" 
        android:onClick="startGame"/>

</LinearLayout>